--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "backbone": "^1.1.2",
+    "bluebird": "^2.9.24",
     "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "express": "~4.2.0",
     "hjs": "~0.0.6",
-    "node-compass": "0.2.3"
+    "jquery": "^2.1.3",
+    "morgan": "~1.0.0",
+    "node-compass": "0.2.3",
+    "request": "^2.55.0",
+    "static-favicon": "~1.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
@@ -18,6 +23,7 @@
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
+    "gulp-jshint": "^1.10.0",
     "gulp-livereload": "^3.8.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
