--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "gulp-folders": "^1.1.0",
     "gulp-jshint": "^1.10.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-minify-css": "^1.1.0",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4"
   }
 }
